--- a/app/src/main/res/drawable/divider_white.xml
+++ b/app/src/main/res/drawable/divider_white.xml
@@ -17,12 +17,7 @@
   ~  */
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_activity_detail"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".detail.DetailActivity"
-    />
-
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <size android:height="1dp" />
+    <solid android:color="@color/colorTransparentWhite"/>
+</shape>
