--- a/app/src/main/res/drawable/yellow_drawable.xml
+++ b/app/src/main/res/drawable/yellow_drawable.xml
@@ -17,12 +17,10 @@
   ~  */
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_activity_detail"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".detail.DetailActivity"
-    />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
+    <solid android:color="@color/YELLOW"/>
+    <size android:width="500dp" android:height="500dp"/>
 
+</shape>
